mengisi sebagian data pada menu Data Terpadu

--- a/.env
+++ b/.env
@@ -21,6 +21,7 @@ CI_ENVIRONMENT = development
 #--------------------------------------------------------------------
 
 app.baseURL = 'http://localhost:8080'
+# app.baseURL = 'https://sid.ridoananda.my.id'
 # app.forceGlobalSecureRequests = false
 
 # app.sessionDriver = 'CodeIgniter\Session\Handlers\FileHandler'
@@ -56,6 +57,12 @@ database.default.database = sid
 database.default.username = root
 database.default.password =
 database.default.DBDriver = MySQLi
+
+#database.default.hostname = 127.0.0.1
+#database.default.database = ridoanan_sid
+#database.default.username = ridoanan_db
+#database.default.password = ridogans123
+#database.default.DBDriver = MySQLi
 
 # database.tests.hostname = localhost
 # database.tests.database = ci4
