--- a/.env
+++ b/.env
@@ -20,8 +20,8 @@ CI_ENVIRONMENT = development
 # APP
 #--------------------------------------------------------------------
 
-app.baseURL = 'http://localhost:8080'
-# app.baseURL = 'https://sid.ridoananda.my.id'
+#app.baseURL = 'http://localhost:8080'
+app.baseURL = 'https://sid.ridoananda.my.id'
 # app.forceGlobalSecureRequests = false
 
 # app.sessionDriver = 'CodeIgniter\Session\Handlers\FileHandler'
@@ -52,17 +52,17 @@ app.baseURL = 'http://localhost:8080'
 # DATABASE
 #--------------------------------------------------------------------
 
-database.default.hostname = 127.0.0.1
-database.default.database = sid
-database.default.username = root
-database.default.password =
-database.default.DBDriver = MySQLi
-
 #database.default.hostname = 127.0.0.1
-#database.default.database = ridoanan_sid
-#database.default.username = ridoanan_db
-#database.default.password = ridogans123
+#database.default.database = sid
+#database.default.username = root
+#database.default.password =
 #database.default.DBDriver = MySQLi
+
+database.default.hostname = 127.0.0.1
+database.default.database = ridoanan_sid
+database.default.username = ridoanan_db
+database.default.password = ridogans123
+database.default.DBDriver = MySQLi
 
 # database.tests.hostname = localhost
 # database.tests.database = ci4
