--- a/.env
+++ b/.env
@@ -22,6 +22,8 @@ CI_ENVIRONMENT = development
 
 app.baseURL = 'http://localhost:8080'
 #app.baseURL = 'https://sid.ridoananda.my.id'
+
+URLFrontEnd = 'http://localhost:8000'
 # app.forceGlobalSecureRequests = false
 
 # app.sessionDriver = 'CodeIgniter\Session\Handlers\FileHandler'
