--- a/.env
+++ b/.env
@@ -20,8 +20,8 @@ CI_ENVIRONMENT = development
 # APP
 #--------------------------------------------------------------------
 
-#app.baseURL = 'http://localhost:8080'
-app.baseURL = 'https://sid.ridoananda.my.id'
+app.baseURL = 'http://localhost:8080'
+#app.baseURL = 'https://sid.ridoananda.my.id'
 
 URLFrontEnd = 'http://localhost:8000'
 # app.forceGlobalSecureRequests = false
@@ -54,17 +54,17 @@ URLFrontEnd = 'http://localhost:8000'
 # DATABASE
 #--------------------------------------------------------------------
 
-#database.default.hostname = 127.0.0.1
-#database.default.database = sid
-#database.default.username = root
-#database.default.password =
-#database.default.DBDriver = MySQLi
-
 database.default.hostname = 127.0.0.1
-database.default.database = ridoanan_sid
-database.default.username = ridoanan_db
-database.default.password = ridogans123
+database.default.database = sid
+database.default.username = root
+database.default.password =
 database.default.DBDriver = MySQLi
+
+#database.default.hostname = 127.0.0.1
+#database.default.database = ridoanan_sid
+#database.default.username = ridoanan_db
+#database.default.password = ridogans123
+#database.default.DBDriver = MySQLi
 
 # database.tests.hostname = localhost
 # database.tests.database = ci4
