--- a/.env
+++ b/.env
@@ -21,7 +21,6 @@ CI_ENVIRONMENT = development
 #--------------------------------------------------------------------
 
 #app.baseURL = 'http://localhost:8080'
-app.baseURL = 'https://sid.ridoananda.my.id'
 
 URLFrontEnd = 'http://localhost:8000'
 # app.forceGlobalSecureRequests = false
@@ -54,16 +53,10 @@ URLFrontEnd = 'http://localhost:8000'
 # DATABASE
 #--------------------------------------------------------------------
 
-#database.default.hostname = 127.0.0.1
-#database.default.database = sid
-#database.default.username = root
-#database.default.password =
-#database.default.DBDriver = MySQLi
-
 database.default.hostname = 127.0.0.1
-database.default.database = ridoanan_sid
-database.default.username = ridoanan_db
-database.default.password = ridogans123
+database.default.database = sid
+database.default.username = root
+database.default.password =
 database.default.DBDriver = MySQLi
 
 # database.tests.hostname = localhost
